form submit event and branching complete, updates to html <p>s

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         </form>
 
         <!-- possibly remove hidden class from master div OR use to clear form with clear button-->
-        <div id="results-div" class="hidden">
             <div id="c-lang" class="hidden">
                 <h3>C#</h3>
                 <p>
+                    Hi there, Swifty! <br />
                     Just like how Taylor Swift's music is known for its
                     versatility, from country roots to pop anthems, C# is a
                     versatile and powerful programming language that can be used
@@ -71,7 +71,8 @@
             <div id="js-lang" class="hidden">
                 <h3>JavaScript</h3>
                 <p>
-                    I noticed between your interest in Rob Zombie and the world
+                    "Who is this irresistible creature who has an insatiable love for the dead?" <br />
+                    Theres a few connections I noticed between your interest in Rob Zombie and the world
                     of programming, specifically JavaScript. Just like how Rob
                     Zombie's music is a unique blend of various genres,
                     combining rock, metal, and horror elements to create a
@@ -86,8 +87,9 @@
             <div id="react-lang" class="hidden">
                 <h3>React</h3>
                 <p>
-                    Just as Halloween is all about creating spooky and
-                    imaginative experiences, React allows you to craft
+                    So you like helloween huh? <br />
+                    Halloween is all about creating spooky and
+                    imaginative experiences, and React allows you to craft
                     captivating and dynamic user interfaces on the web. It's a
                     programming language that lets you bring your creative ideas
                     to life, much like how you'd design a hauntingly enchanting
@@ -99,6 +101,6 @@
                     digital magic.
                 </p>
             </div>
-        </div>
+        
     </body>
 </html>
