make h3s h2s in lang divs, add span greetings with css class

--- a/index.html
+++ b/index.html
@@ -48,59 +48,55 @@
             <button type="submit">Tell me my destiny</button>
         </form>
 
-        <!-- possibly remove hidden class from master div OR use to clear form with clear button-->
-            <div id="c-lang" class="hidden">
-                <h3>C#</h3>
-                <p>
-                    Hi there, Swifty! <br />
-                    Just like how Taylor Swift's music is known for its
-                    versatility, from country roots to pop anthems, C# is a
-                    versatile and powerful programming language that can be used
-                    for a wide range of applications. Learning C# can give you
-                    the ability to create various types of software, from
-                    desktop applications to games, much like how Taylor Swift
-                    has evolved her musical style over the years. Imagine being
-                    able to develop your own software projects that have a
-                    meaningful impact on people's lives, just like Taylor
-                    Swift's songs touch the hearts of her fans. Learning C# can
-                    empower you to bring your innovative ideas to life and
-                    create software that resonates with users.
-                </p>
-            </div>
+        <div id="c-lang" class="hidden">
+            <h2>C#</h2>
+            <p>
+                <span class="greeting">Hi there, Swifty!</span><br />
+                Just like how Taylor Swift's music is known for its versatility,
+                from country roots to pop anthems, C# is a versatile and
+                powerful programming language that can be used for a wide range
+                of applications. Learning C# can give you the ability to create
+                various types of software, from desktop applications to games,
+                much like how Taylor Swift has evolved her musical style over
+                the years. Imagine being able to develop your own software
+                projects that have a meaningful impact on people's lives, just
+                like Taylor Swift's songs touch the hearts of her fans. Learning
+                C# can empower you to bring your innovative ideas to life and
+                create software that resonates with users.
+            </p>
+        </div>
 
-            <div id="js-lang" class="hidden">
-                <h3>JavaScript</h3>
-                <p>
-                    "Who is this irresistible creature who has an insatiable love for the dead?" <br />
-                    Theres a few connections I noticed between your interest in Rob Zombie and the world
-                    of programming, specifically JavaScript. Just like how Rob
-                    Zombie's music is a unique blend of various genres,
-                    combining rock, metal, and horror elements to create a
-                    distinctive sound, JavaScript allows you to blend different
-                    technologies and create interactive and dynamic experiences
-                    on the web. It's a language that empowers you to bring your
-                    creative ideas to life, much like how Rob Zombie brings his
-                    artistic vision to the stage and screen.
-                </p>
-            </div>
+        <div id="js-lang" class="hidden">
+            <h2>JavaScript</h2>
+            <p>
+                <span class="greeting">"Who is this irresistible creature who has an insatiable love for the dead?"</span><br />
+                You! Theres a few connections I noticed between your interest in
+                Rob Zombie and the world of programming, specifically
+                JavaScript. Just like how Rob Zombie's music is a unique blend
+                of various genres, combining rock, metal, and horror elements to
+                create a distinctive sound, JavaScript allows you to blend
+                different technologies and create interactive and dynamic
+                experiences on the web. It's a language that empowers you to
+                bring your creative ideas to life, much like how Rob Zombie
+                brings his artistic vision to the stage and screen.
+            </p>
+        </div>
 
-            <div id="react-lang" class="hidden">
-                <h3>React</h3>
-                <p>
-                    So you like helloween huh? <br />
-                    Halloween is all about creating spooky and
-                    imaginative experiences, and React allows you to craft
-                    captivating and dynamic user interfaces on the web. It's a
-                    programming language that lets you bring your creative ideas
-                    to life, much like how you'd design a hauntingly enchanting
-                    Halloween scene. Imagine being able to build interactive
-                    websites or apps that engage users and create seamless,
-                    immersive experiences, just like the way Halloween
-                    decorations and setups captivate people's attention.
-                    Learning React can give you the power to conjure up your own
-                    digital magic.
-                </p>
-            </div>
-        
+        <div id="react-lang" class="hidden">
+            <h2>React</h2>
+            <p>
+                <span class="greeting">So you like Halloween, huh?</span><br />
+                Halloween is all about creating spooky and imaginative
+                experiences, and React allows you to craft captivating and
+                dynamic user interfaces on the web. It's a programming language
+                that lets you bring your creative ideas to life, much like how
+                you'd design a hauntingly enchanting Halloween scene. Imagine
+                being able to build interactive websites or apps that engage
+                users and create seamless, immersive experiences, just like the
+                way Halloween decorations and setups captivate people's
+                attention. Learning React can give you the power to conjure up
+                your own digital magic.
+            </p>
+        </div>
     </body>
 </html>
