finish branching, result printing correctly in printed-answer <p>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
             <button type="submit">Tell me my destiny</button>
         </form>
 
-        <div id="c-lang" class="hidden">
+        <p id="printed-answer"></p>
+
+        <div id="lang-div" class="hidden">
+        <div id="c-lang">
             <h2>C#</h2>
             <p>
                 <span class="greeting">Hi there, Swifty!</span><br />
@@ -66,7 +69,7 @@
             </p>
         </div>
 
-        <div id="js-lang" class="hidden">
+        <div id="js-lang">
             <h2>JavaScript</h2>
             <p>
                 <span class="greeting">"Who is this irresistible creature who has an insatiable love for the dead?"</span><br />
@@ -82,7 +85,7 @@
             </p>
         </div>
 
-        <div id="react-lang" class="hidden">
+        <div id="react-lang">
             <h2>React</h2>
             <p>
                 <span class="greeting">So you like Halloween, huh?</span><br />
@@ -97,6 +100,7 @@
                 attention. Learning React can give you the power to conjure up
                 your own digital magic.
             </p>
+        </div>
         </div>
     </body>
 </html>
