rework printed-answer in html and js, printing properly in new div

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
                 <option value="rob">Rob Zombie</option></select
             ><br /><br />
 
-            <button type="submit">Tell me my destiny</button>
+            <button type="submit" id="submit-btn">Tell me my destiny</button>
         </form>
 
-        <p id="printed-answer"></p>
+        <div id="printed-answer"></div>
+        
 
         <div id="lang-div" class="hidden">
         <div id="c-lang">
