WIP add css styling to page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <div class="header-div">
             <h1>So you want to be a programmer?</h1>
             <h2>
-                Answer these simple questions and we will tell you your destiny!
+                Answer these simple questions and we will predict your programming destiny!
             </h2>
         </div>
-        <form>
+
+        <form id="submission-form">
             <label for="season">What season do you prefer?</label><br />
             <select id="season">
                 <option value="fall">Fall</option>
