--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <button type="submit" id="submit-btn">Tell me my destiny</button>
         </form>
 
-        <div id="printed-answer"></div>
+        <div id="printed-answer-div">
+            <p id="printed-answer"></p>
+        </div>
         
 
         <div id="lang-div" class="hidden">
