make img flicker using css

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                     empower you to bring your innovative ideas to life and
                     create software that resonates with users.
                 </p>
+                <!-- <img src=""> add img for c# and one for each other language to column flex so it shows up to the right of the language blurb, will delete the title up top -->
             </div>
 
             <div id="js-lang">
