add language logos and styling, WIP css styling

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
         </div>
 
         <div id="top-container">
-            <div id="fortune-teller">
+            <div id="sign">
                 <img
-                    src="img/sign.jpg"
-                    alt="A neon sign reading 'Psychic' in a dark window"
-                />
+                    src="img/sign.jpg" alt="A neon sign reading 'Psychic' in a dark window" />
             </div>
             <div id="form-div">
                 <p>
@@ -71,7 +69,7 @@
         </div>
 
         <div id="lang-div" class="hidden">
-            <div id="c-lang">
+            <div class="languages" id="c-lang">
                 <h2>C#</h2>
                 <p>
                     <span class="greeting">Hi there, Swifty!</span><br />
@@ -88,10 +86,11 @@
                     empower you to bring your innovative ideas to life and
                     create software that resonates with users.
                 </p>
-                <!-- <img src=""> add img for c# and one for each other language to column flex so it shows up to the right of the language blurb, will delete the title up top -->
+                <img src="img/c-sharp.png" class="lang-img">
+                <!-- <img src=> add img for c# and one for each other language to column flex so it shows up to the right of the language blurb, will delete the title up top -->
             </div>
 
-            <div id="js-lang">
+            <div id="js-lang" class="languages">
                 <h2>JavaScript</h2>
                 <p>
                     <span class="greeting"
@@ -109,9 +108,10 @@
                     life, much like how Rob Zombie brings his artistic vision to
                     the stage and screen.
                 </p>
+                <img src="img/js.png" class="lang-img">
             </div>
 
-            <div id="react-lang">
+            <div id="react-lang" class="languages">
                 <h2>React</h2>
                 <p>
                     <span class="greeting">So you like Halloween, huh?</span
@@ -127,6 +127,7 @@
                     setups captivate people's attention. Learning React can give
                     you the power to conjure up your own digital magic.
                 </p>
+                <img src="img/react.png" class="lang-img">
             </div>
         </div>
     </body>
