--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="css/styles.css" rel="stylesheet" type="text/css" />
         <script src="js/scripts.js"></script>
+        <style>
+            @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+        </style>
         <title>Language Suggester</title>
     </head>
 
     <body>
         <div class="header-div">
-            <h1>So you want to be a programmer?</h1>
+            <h1>The Tech Psychic</h1>
         </div>
 
         <div id="top-container">
             <div id="sign">
                 <img
-                    src="img/sign.jpg" alt="A neon sign reading 'Psychic' in a dark window" />
+                    src="img/sign.jpg"
+                    alt="A neon sign reading 'Psychic' in a dark window"
+                />
             </div>
             <div id="form-div">
                 <p>
-                    Answer these simple questions and I will predict your
-                    programming future:
+                    Answer these simple questions and I will predict which
+                    programming language your future holds:
                 </p>
                 <form id="submission-form">
                     <label for="season">What season do you prefer?</label><br />
@@ -70,64 +75,76 @@
 
         <div id="lang-div" class="hidden">
             <div class="languages" id="c-lang">
-                <h2>C#</h2>
                 <p>
-                    <span class="greeting">Hi there, Swifty!</span><br />
+                    <span class="bold">Hi there, Swifty!</span><br /><br />
                     Just like how Taylor Swift's music is known for its
-                    versatility, from country roots to pop anthems, C# is a
-                    versatile and powerful programming language that can be used
-                    for a wide range of applications. Learning C# can give you
-                    the ability to create various types of software, from
+                    versatility, from country roots to pop anthems,
+                    <span class="bold">C#</span> is a versatile and powerful
+                    programming language that can be used for a wide range of
+                    applications. Learning <span class="bold">C#</span> can give
+                    you the ability to create various types of software, from
                     desktop applications to games, much like how Taylor Swift
                     has evolved her musical style over the years. Imagine being
                     able to develop your own software projects that have a
                     meaningful impact on people's lives, just like Taylor
-                    Swift's songs touch the hearts of her fans. Learning C# can
-                    empower you to bring your innovative ideas to life and
-                    create software that resonates with users.
+                    Swift's songs touch the hearts of her fans. Learning
+                    <span class="bold">C#</span> can empower you to bring your
+                    innovative ideas to life and create software that resonates
+                    with users.
                 </p>
-                <img src="img/c-sharp.png" class="lang-img">
-                <!-- <img src=> add img for c# and one for each other language to column flex so it shows up to the right of the language blurb, will delete the title up top -->
+                <img
+                    src="img/c-sharp.png"
+                    class="lang-img"
+                    alt="An image of the C# logo."
+                />
             </div>
 
             <div id="js-lang" class="languages">
-                <h2>JavaScript</h2>
                 <p>
-                    <span class="greeting"
+                    <span class="bold"
                         >"Who is this irresistible creature who has an
                         insatiable love for the dead?"</span
                     ><br />
+                    <br />
                     You! Theres a few connections I noticed between your
                     interest in Rob Zombie and the world of programming,
-                    specifically JavaScript. Just like how Rob Zombie's music is
-                    a unique blend of various genres, combining rock, metal, and
-                    horror elements to create a distinctive sound, JavaScript
-                    allows you to blend different technologies and create
-                    interactive and dynamic experiences on the web. It's a
-                    language that empowers you to bring your creative ideas to
-                    life, much like how Rob Zombie brings his artistic vision to
-                    the stage and screen.
+                    specifically <span class="bold">JavaScript.</span> Just like
+                    how Rob Zombie's music is a unique blend of various genres,
+                    combining rock, metal, and horror elements to create a
+                    distinctive sound,
+                    <span class="bold">JavaScript.</span> allows you to blend
+                    different technologies and create interactive and dynamic
+                    experiences on the web. It's a language that empowers you to
+                    bring your creative ideas to life, much like how Rob Zombie
+                    brings his artistic vision to the stage and screen.
                 </p>
-                <img src="img/js.png" class="lang-img">
+                <img
+                    src="img/js.png"
+                    class="lang-img"
+                    alt="An image of the JavaScript logo."
+                />
             </div>
 
             <div id="react-lang" class="languages">
-                <h2>React</h2>
                 <p>
-                    <span class="greeting">So you like Halloween, huh?</span
-                    ><br />
+                    <span class="bold">So you like Halloween, huh?</span><br /><br />
                     Halloween is all about creating spooky and imaginative
-                    experiences, and React allows you to craft captivating and
-                    dynamic user interfaces on the web. It's a programming
-                    language that lets you bring your creative ideas to life,
-                    much like how you'd design a hauntingly enchanting Halloween
-                    scene. Imagine being able to build interactive websites or
-                    apps that engage users and create seamless, immersive
-                    experiences, just like the way Halloween decorations and
-                    setups captivate people's attention. Learning React can give
+                    experiences, and <span class="bold">React</span> allows you
+                    to craft captivating and dynamic user interfaces on the web.
+                    It's a programming language that lets you bring your
+                    creative ideas to life, much like how you'd design a
+                    hauntingly enchanting Halloween scene. Imagine being able to
+                    build interactive websites or apps that engage users and
+                    create seamless, immersive experiences, just like the way
+                    Halloween decorations and setups captivate people's
+                    attention. Learning <span class="bold">React</span> can give
                     you the power to conjure up your own digital magic.
                 </p>
-                <img src="img/react.png" class="lang-img">
+                <img
+                    src="img/react.png"
+                    class="lang-img"
+                    alt="An image of the React logo."
+                />
             </div>
         </div>
     </body>
