add reset button with styling to form

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                     <button type="submit" id="submit-btn">
                         Tell me my destiny
                     </button>
+                    <button type="button" id="reset">Reset</button>
+
                 </form>
             </div>
         </div>
