--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <script src="js/scripts.js"></script>
     <style>
-        @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+        @import url('https://fonts.googleapis.com/css2?family=Moirai+One&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Moirai+One&display=swap');
     </style>
     <title>Language Suggester</title>
 </head>
@@ -22,7 +23,7 @@
             <img src="img/sign.jpg" alt="A neon sign reading 'Psychic' in a dark window" />
         </div>
         <div id="form-div">
-            <p>
+            <p class="bold">
                 Answer these simple questions and I will predict which
                 programming language your future holds:
             </p>
